--- a/static/style/contact.css
+++ b/static/style/contact.css
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500&display=swap');
 
-@media only screen and (max-width:320px) {
+@media only screen and (max-width:480px) {
   form { 
 
     height: 100vh;
     max-width:250px; 
-    margin:50px auto; 
+    margin: auto; 
   }
 }
 
-@media only screen and (min-width:321px) {
+@media only screen and (min-width:481px) {
   form { 
 
     height: 100vh;
