--- a/static/style/projects.css
+++ b/static/style/projects.css
@@ -25,7 +25,7 @@ article {
     
 }
 
-@media only screen and (max-width:320px) {
+@media only screen and (max-width:480px) {
     .title {
         font-size: 40px;
         padding-bottom: 2px;
@@ -92,7 +92,7 @@ article {
     }
 } 
 
-@media only screen and (min-width:321px) {
+@media only screen and (min-width:481px) {
     .title {
 
         font-size: 40px;
